--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,20 +4,20 @@
 # Pedro Liberatti <ferrahwolfeh@protonmail.com>, 2021.
 # Morgana Milo <morganamilo@archlinux.org>, 2021.
 # Juliano Marcelino <github@jmarcelino.com.br>, 2021.
-# João Vitor S. Anjos <jvanjos@protonmail.com>, 2021.
+# João Vitor S. Anjos <jvanjos@protonmail.com>, 2021-2024.
 msgid ""
 msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2023-12-01 19:43+0000\n"
-"PO-Revision-Date: 2022-12-03 18:58-0300\n"
+"PO-Revision-Date: 2024-04-15 16:31-0300\n"
 "Last-Translator: João Vitor S. Anjos\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.2.1\n"
+"X-Generator: Poedit 3.4.2\n"
 "X-Poedit-Bookmarks: -1,110,-1,-1,-1,-1,-1,-1,-1,-1\n"
 
 #: src/clean.rs:36
@@ -57,9 +57,8 @@ msgid "can't open clone dir: {}"
 msgstr "não foi possível abrir o diretório clone: {}"
 
 #: src/clean.rs:141
-#, fuzzy
 msgid "could not parse .SRCINFO for '{}'"
-msgstr "não foi possível encontrar .SRCINFO para '{}'"
+msgstr "não foi possível analisar .SRCINFO para '{}'"
 
 #: src/command_line.rs:134
 msgid "option {} expects a value"
@@ -119,7 +118,7 @@ msgstr "apenas uma operação pode ser feita por vez"
 
 #: src/config.rs:798
 msgid "no local repo named {}"
-msgstr ""
+msgstr "nenhum repositório local nomeado {}"
 
 #: src/config.rs:821
 msgid "can not find local repo '{}' in pacman.conf"
@@ -207,9 +206,8 @@ msgid "failed to write to temporary file: {}"
 msgstr "falha ao escrever no arquivo temporário: {}"
 
 #: src/devel.rs:244
-#, fuzzy
 msgid "failed to rename '{temp}' to '{devel_toml}"
-msgstr "falha ao renomear '{temp}' para '{devel_json}"
+msgstr "falha ao renomear '{temp}' para'{devel_toml}"
 
 #: src/devel.rs:490
 msgid "package does not have an update"
@@ -220,9 +218,8 @@ msgid "failed to lookup: {}"
 msgstr "falha ao buscar: {}"
 
 #: src/devel.rs:562
-#, fuzzy
 msgid "invalid toml: {}"
-msgstr "json inválido: {}"
+msgstr "toml inválido: {}"
 
 #: src/download.rs:95
 msgid "packages not in the AUR: "
@@ -433,6 +430,8 @@ msgid ""
 "    --interactive          Enable interactive package selection for -S, -R, -"
 "Ss and -Qs"
 msgstr ""
+"    --interactive               Ativa seleção interativa de pacotes para -S, "
+"-R, -Ss e -Qs"
 
 #: src/help.rs:39
 msgid "    --aururl    <url>      Set an alternative AUR URL"
@@ -480,9 +479,8 @@ msgid "    --sudoflags <flags>    Pass arguments to sudo"
 msgstr "    --sudoflags <argumentos>    Passa argumentos para sudo"
 
 #: src/help.rs:50
-#, fuzzy
 msgid "    --pkgctl    <file>     pkgctl command to use"
-msgstr "    --git       <arquivo>       Comando git a ser usado"
+msgstr "    --pkgctl    <arquivo>       Comando pkgctl a ser usado"
 
 #: src/help.rs:51
 msgid "    --bat       <file>     bat command to use"
@@ -664,9 +662,8 @@ msgid "    --[no]signdb           Sign databases with gpg"
 msgstr "    --[no]signdb           Assina bancos de dados com gpg"
 
 #: src/help.rs:87
-#, fuzzy
 msgid "    --[no]localrepo        Build packages into a local repo"
-msgstr "    --localrepo            Compila pacotes em um repositório local"
+msgstr "    --[no]localrepo        Compila pacotes em um repositório local"
 
 #: src/help.rs:88
 msgid ""
@@ -685,7 +682,6 @@ msgstr ""
 "desenvolvimento"
 
 #: src/help.rs:90
-#, fuzzy
 msgid "    --ignoredevel          Ignore devel upgrades for specified packages"
 msgstr ""
 "    --ignoredevel          Ignora atualizações devel para pacotes "
@@ -1044,9 +1040,8 @@ msgid "repo {} does not have a URL or Path"
 msgstr "repositório {} não tem uma URL ou caminho"
 
 #: src/pkgbuild.rs:134
-#, fuzzy
 msgid "repo {} not downloaded (use -Sy --pkgbuilds to download)"
-msgstr "repositório {} não baixado (use -Sya para baixar)"
+msgstr "repositório {} não baixado (use -Sy --pkgbuilds para baixar)"
 
 #: src/pkgbuild.rs:181
 msgid "Generating .SRCINFO for {repo}/{dir}..."
@@ -1121,9 +1116,8 @@ msgid "Packages to install (eg: 1 2 3, 1-3):"
 msgstr "Pacotes a instalar (ex: 1 2 3, 1-3):"
 
 #: src/search.rs:491
-#, fuzzy
 msgid "Select packages (eg: 1 2 3, 1-3):"
-msgstr "Pacotes a instalar (ex: 1 2 3, 1-3):"
+msgstr "Selecionar pacotes (ex: 1 2 3, 1-3):"
 
 #: src/stats.rs:90
 msgid "Total installed packages: {}"
