--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -92,7 +92,7 @@ devel update but may still be upgraded if the pkgver changes.
 .B IgnoreDevelSource
 Like IgnoreDevel but targets urls in the source=() array of pkgbuilds. This can be useful
 if a package has a properly working main git source but also has an unversioned secondary
-source that doesn't effect the pkgver.
+source that doesn't affect the pkgver.
 
 .TP
 .B CleanAfter
