--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -17,7 +17,7 @@ $XDG_CONFIG_HOME is not set, or the file doesn't exist, paru attempts to read
 from $HOME/.config/paru/paru.conf. If that file doesn't exist, it will read
 the system config from /etc/paru.conf.
 
-Additionally, the \fBInclude\fB directive can be used to copy paste files into
+Additionally, the \fBInclude\fR directive can be used to copy paste files into
 the config. This could be used to extend the system config by including it in
 your user's config and then defining options.
 
